# svgutils

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCairo.cmake  FindFontconfig.cmake  SVGUtilsMacros.cmake
examples/: CMakeLists.txt  cairotest.cc  index.html  jstest.cc  main.cc  plottest.cc
include/svgcairo/: freetype.h  svg_cairo.h
include/svgplotlib/: plotlib.h  plotlib_core.h
include/svgutils/: cli_args.h  css_colors.def  css_properties.def  css_utils.h  js_writer.h  jswriter.h  plotlib.h  plotlib_core.h  svg_entities.def  svg_formatted_writer.h  svg_logging_writer.h  svg_reader_writer.h  svg_utils.h  svg_writer.h  utils.h
lib/: css_utils.cc  freetype.cc  plotlib.cc  svg_cairo.cc  svg_reader_writer.cc  svg_utils.cc
test/: CMakeLists.txt  cairotest.cc  jstest.cc  jstest.html  main.cc  plottest.cc
test/Inputs/: README.md
test/gallery/: gallery.test
test/svg2png/: simple.test
test/tedisex/: basic.test
tools/: CMakeLists.txt
tools/svg2pdf/: CMakeLists.txt  svg2pdf.cc
tools/svg2png/: CMakeLists.txt  svg2png.cc
tools/svgfmt/: CMakeLists.txt  svgfmt.cc
unittest/: CMakeLists.txt  cli_args_test.cc  svg_logging_writer_test.cc
utils/: CMakeLists.txt
utils/include/: cli_args.h
utils/svg2cxx/: CMakeLists.txt  svg2cxx.cc
utils/tedisex/: CMakeLists.txt  tedisex.cc  tedisex_config.h.in
